--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
  Text Domain:  understrap-child
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: holger1411/understrap-child
+ GitHub Theme URI: rickyangeles/irex-theme
 */
 
 
