Changes to the way the main navbar works

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11646,4 +11646,7 @@ figure.woocommerce-product-gallery__wrapper {
   background-color: WhiteSmoke;
   color: black !important; }
 
+.dropdown:hover > .dropdown-menu {
+  display: block; }
+
 /*# sourceMappingURL=child-theme.css.map */
