Changing over to Child Theme

--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -8,7 +8,13 @@
 @import "assets/underscores";                            // <------- Underscores media styles
 
 // Any additional imported files //
-@import "theme/child_theme";                             // <------- Add your styles into this file
+@import "theme/child_theme";
+@import "partials/body";
+@import "partials/header";
+@import "partials/footer";
+@import "partials/home";
+@import "partials/pages";
+@import "partials/blocks";
 @import "../src/sass/understrap/theme/contact-form7";    // <------- Loads some basic styling for contact form 7 plugin
 
 
